# zpp2022-seastar-rust-integration-playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clippy.yml  clippy_check.yml  cmake.yml  rust.yml
cpp/: hello_from_cpp.cc  hello_from_cpp.h  main.cc
cxx-async/cxx-async/: build.rs
cxx-async/cxx-async/include/rust/: awaiter.hh  cxx_async_seastar.h
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
ffi/src/cpp_part/: line.cc  seastar_ffi.cc  seastar_ffi.h
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  load_future.rs  rust_storage.rs  store_future.rs  waker.rs
rust_requests/: Cargo.toml  build.rs
rust_requests/src/: lib.rs
server/: ffi.cc  ffi.hh  main.cc  server.cc  server.hh
server/rust_ffi/: rust_ffi.cc  rust_ffi.h
server/tasks/: line.cc  line.h  load_task.cc  load_task.hh  store_task.cc  store_task.hh
